crates/ars-components/src/date_time/range_calendar/snapshots/ars_components__date_time__range_calendar__tests__cell_trigger_anchor.snap
---
source: crates/ars-components/src/date_time/range_calendar/tests.rs
expression: "snapshot_attrs(&api.cell_trigger_attrs(&date(2024, 1, 10)))"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-anchor",
            ),
            Bool(
                true,
            ),
        ),
        (
            Data(
                "ars-in-hover-range",
            ),
            Bool(
                true,
            ),
        ),
        (
            Data(
                "ars-part",
            ),
            String(
                "cell-trigger",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "range-calendar",
            ),
        ),
        (
            Aria(
                Label,
            ),
            String(
                "January 10, 2024, Wednesday",
            ),
        ),
        (
            TabIndex,
            String(
                "0",
            ),
        ),
        (
            Type,
            String(
                "button",
            ),
        ),
    ],
    styles: [],
}
