crates/ars-components/src/date_time/range_calendar/snapshots/ars_components__date_time__range_calendar__tests__cell_trigger_range_start.snap
---
source: crates/ars-components/src/date_time/range_calendar/tests.rs
expression: "snapshot_attrs(&api.cell_trigger_attrs(&date(2024, 1, 10)))"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-in-range",
            ),
            Bool(
                true,
            ),
        ),
        (
            Data(
                "ars-part",
            ),
            String(
                "cell-trigger",
            ),
        ),
        (
            Data(
                "ars-range-start",
            ),
            Bool(
                true,
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "range-calendar",
            ),
        ),
        (
            Aria(
                Label,
            ),
            String(
                "January 10, 2024, Wednesday (range start)",
            ),
        ),
        (
            Aria(
                Selected,
            ),
            String(
                "true",
            ),
        ),
        (
            TabIndex,
            String(
                "0",
            ),
        ),
        (
            Type,
            String(
                "button",
            ),
        ),
    ],
    styles: [],
}
